--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,32 @@
-.list-group-item {
-  line-height: 2.5;
+.game-container {
+  background-color: rebeccapurple;
+  display: flex;
+  width: 300px;
+  height: 300px;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.row {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.col {
+  background-color: black;
+  width: 90px;
+  height: 90px;
+  font-size: 72px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.col--x {
+  color: hotpink;
+}
+
+.col--o {
+  color: aqua;
 }
